--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clinton Khoza | XR Developer Portfolio</title>
+    <title>Clinton Khoza | Full-Stack Developer Portfolio</title>
     <meta name="description" content="Clinton Khoza's portfolio - Full-Stack Developer specializing in Angular, ASP.NET, and Extended Reality technologies." />
     <meta name="author" content="Clinton Khoza" />
 
-    <meta property="og:title" content="Clinton Khoza | XR Developer Portfolio" />
+    <meta property="og:title" content="Clinton Khoza | Full-Stack Developer Portfolio" />
     <meta property="og:description" content="Full-Stack Developer specializing in Angular, ASP.NET, and Extended Reality technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
